--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
 <nav class="navbar">
   <h1 class="logo">SheRoutes</h1>
   <ul class="nav-links">
-    <li><a href="#">Home</a></li>
-    <li><a href="#map-section">Routes</a></li>
-    <li><a href="#" onclick="sendSOS()">SOS</a></li>
-    <li><a href="#">About</a></li>
-    <li><a href="#">Login</a></li>
+    <li><a href="home.html">Home</a></li>
+    <li><a href="route.html">Routes</a></li>
+    <li><a href="sos.html" onclick="sendSOS()">SOS</a></li>
+    <li><a href="about.html">About</a></li>
+    <li><a href="login.html">Login</a></li>
   </ul>
 </nav>
 
